# distributed-parallel-neural-network-training-engine

./: .gitignore  CMakeLists.txt  README.md  build.bat  buildcode.py  pyproject.toml  setup.cfg  setup.py
benchmarks/: gtx1650_results.json  kernel_bench.py  matmul_results.json  matmul_results_v2.json
bridge/: bindings.cpp
engine/: batch_norm_layer.cpp  batch_norm_layer.hpp  dense_layer.cpp  dense_layer.hpp  layer.hpp  network.cpp  network.hpp
kernels/: CMakeLists.txt  activations.cu  batch_norm.cu  kernel_utils.cuh  matmul.cu  sgd_update.cu  test_device.cu
mpi/: gradient_sync.cpp  gradient_sync.hpp  ring_allreduce.cpp
plots/: run.csv
python/: config.py  data_loader.py  demo.py  multi_client_load.py  plot_results.py  send_epochs.py  server.py  start_server.py  test_client.py  train.py  training_queue.py  training_state.py
tests/: test_bridge.py  test_exception.cpp  test_kernels.py  test_mpi.cpp  test_network.cpp  test_training_queue.py
